samples/_failures_safe/1761147843_9ea9a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da014d9f.c: In function ‘main’:
./samples/SAFE/__tmp_da014d9f.c:135:5: error: expected expression at end of input
  135 |     printf("Enter values for matrix B (%dx%d):\n",
      |     ^~~~~~
./samples/SAFE/__tmp_da014d9f.c:135:5: error: expected declaration or statement at end of input
